# binary-analyzer

./: .gitignore  README.md  build.bat  build.py  build.sh  pyproject.toml
.github/workflows/: build.yml  tests.yml
Docs/: Remediations.md
analyzer/: analysis.py  binary-analyzer.spec  build.bat  cli.py  entropy.py  indicators.py  main.py  pe_parser.py  requirements.txt  risk.py
docs/: architecture.md
logs/: dev_logs.md
src/binary_analyzer/: __init__.py  __main__.py  analysis.py  cli.py  default_rules.json  entropy.py  gui.py  indicators.py  packer.py  pe_parser.py  quarantine.py  risk.py  rules.py  string_extractor.py
src/binary_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/binary_analyzer/unpackers/: __init__.py  base.py  upx.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_packer.py  test_quarantine.py  test_risk.py  test_rules.py  test_unpack_pipeline.py
