[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binary-analyzer"
version = "0.2.0"
description = "Analyze executable files for RE indicators (PE/ELF): strings, entropy, imports, risk."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "lief==0.17.6",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pyinstaller==6.19.0",
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.4.0",
]

[project.scripts]
binary-analyzer = "binary_analyzer.cli:main"
binary-analyzer-gui = "binary_analyzer.gui:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
binary_analyzer = ["default_rules.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
